chore: update sdk version, replace copyright symbol with htmlentity

--- a/package/miraxr/src/assets/translations/en_US.json
+++ b/package/miraxr/src/assets/translations/en_US.json
@@ -12,7 +12,7 @@
     "terms_of_use_url": "https://miraxr.io",
     "help": "Help",
     "help_url": "https://miraxr.io",
-    "copyright": "Copyright © 2025",
+    "copyright": "Copyright &copy; 2025",
     "company": "Mira XR",
     "company_url": "https://miraxr.io",
     "powered_by_logo": "/assets/visuals/powered-by-zb.png",
